<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_money_setting_next_step"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:contentDescription="@string/tips_activity_next_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdg_money_creation_way"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/ic_navigate_next_black_24dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        tools:ignore="UnusedAttribute" />

    <RadioGroup
        android:id="@+id/rdg_money_creation_way"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12">

        <RadioButton
            android:id="@+id/rdb_fix_number_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_padding_left_default_value"
            android:layout_marginLeft="@dimen/dp_padding_left_default_value"
            android:checked="true"
            android:text="@string/lbl_get_fix_money"
            android:textColor="@color/app_desc_text_color" />

        <EditText
            android:id="@+id/txt_fix_number_money"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/sh_text_edit_background"
            android:ems="10"
            android:hint="@string/hits_get_fixed_money"
            android:importantForAutofill="no"
            android:inputType="number|phone"
            android:paddingStart="45dp"
            android:paddingLeft="45dp"
            android:text="@string/txt_default_fixed_money"
            android:textColor="@color/app_desc_text_color"
            tools:ignore="RtlSymmetry" />

        <RadioButton
            android:id="@+id/rdb_get_money_by_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_padding_left_default_value"
            android:layout_marginLeft="@dimen/dp_padding_left_default_value"
            android:text="@string/lbl_get_money_by_age"
            android:textColor="@color/app_desc_text_color" />

        <EditText
            android:id="@+id/txt_get_money_by_age"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:background="@drawable/sh_text_edit_background"
            android:ems="10"
            android:hint="@string/hits_get_money_by_age"
            android:inputType="number|phone"
            android:paddingStart="45dp"
            android:paddingLeft="45dp"
            android:text="@string/txt_money_per_age"
            android:textColor="@color/app_desc_text_color"
            tools:ignore="RtlSymmetry" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>