...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bidder_list_tips"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btn_bidder_list_item_next_step"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/tips_activity_next_step"
...
