...
        android:label="AuctionLotAddingFragment" >
        <action
            android:id="@+id/action_auctionLotAddingFragment_to_auctionLotListFragment"
            app:destination="@id/auctionLotListFragment" />
    </fragment>
    <fragment
        android:id="@+id/moneySettingFragment"
        android:name="com.github.xwanlion.lifeauctioneer.view.MoneySettingFragment"
        android:label="SettingMoneyFragment" >
        <action
            android:id="@+id/action_moneySettingFragment_to_hostManSettingFragment"
            app:destination="@id/hostManSettingFragment" />
        <action
...
